--- a/restServer/packages.config
+++ b/restServer/packages.config
@@ -4,9 +4,6 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net471" />
   <package id="DynamicLanguageRuntime" version="1.2.1" targetFramework="net471" />
   <package id="EMGU.CV" version="3.4.1.2976" targetFramework="net471" />
-  <package id="IronPython" version="2.7.8.1" targetFramework="net471" />
-  <package id="IronPython.StdLib" version="2.7.8.1" targetFramework="net471" />
-  <package id="IronPythonConsole" version="1.1.4.0" targetFramework="net471" />
   <package id="jQuery" version="3.3.1" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net471" />
@@ -31,6 +28,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net471" />
   <package id="Modernizr" version="2.8.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
+  <package id="System.Data.SqlClient" version="4.5.1" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net471" />
   <package id="WebGrease" version="1.6.0" targetFramework="net471" />
   <package id="WindowsAzure.Storage" version="9.1.1" targetFramework="net471" />
