--- a/restServer/restServer.csproj
+++ b/restServer/restServer.csproj
@@ -262,19 +262,19 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="BackEnd\cSharp\ResponseException.cs" />
-    <Compile Include="BackEnd\cSharp\DatabaseHandler.cs" />
-    <Compile Include="BackEnd\cSharp\FacenetHandler.cs" />
+    <Compile Include="BackEnd\ResponseException.cs" />
+    <Compile Include="BackEnd\DatabaseHandler.cs" />
+    <Compile Include="BackEnd\FacenetHandler.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\CFRFController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BackEnd\cSharp\FaceHandler.cs" />
-    <Compile Include="BackEnd\cSharp\Informations.cs" />
-    <Compile Include="BackEnd\cSharp\LocationHandler.cs" />
-    <Compile Include="BackEnd\cSharp\PresenceHandler.cs" />
+    <Compile Include="BackEnd\FaceHandler.cs" />
+    <Compile Include="BackEnd\Informations.cs" />
+    <Compile Include="BackEnd\LocationHandler.cs" />
+    <Compile Include="BackEnd\PresenceHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\AddDates.sql" />
@@ -283,9 +283,6 @@
     <Content Include="App_Data\Populate.sql" />
     <Content Include="App_Data\Select.sql" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
-    <Content Include="BackEnd\Python\Facenet\images\daniel-radcliffe_2.jpg" />
-    <Content Include="BackEnd\Python\Facenet\images\daniel-radcliffe_4.jpg" />
-    <Content Include="BackEnd\Python\Facenet\requirements.txt" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -298,13 +295,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="BackEnd\Python\Facenet\pythonCodes\align\det1.npy" />
-    <Content Include="BackEnd\Python\Facenet\pythonCodes\align\det2.npy" />
-    <Content Include="BackEnd\Python\Facenet\pythonCodes\align\det3.npy" />
-    <Content Include="BackEnd\Python\Facenet\pythonCodes\align\detect_face.py" />
-    <Content Include="BackEnd\Python\Facenet\pythonCodes\align\__pycache__\detect_face.cpython-36.pyc" />
-    <Content Include="BackEnd\Python\Facenet\pythonCodes\facenet.py" />
-    <Content Include="BackEnd\Python\Facenet\models\20170512-110547.pb" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
     <Content Include="Areas\HelpPage\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\ResourceModel.cshtml" />
@@ -330,8 +320,6 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
-    <Content Include="BackEnd\Python\Facenet\pythonCodes\FacenetMatch.py" />
-    <Content Include="BackEnd\Python\Facenet\pythonCodes\FacenetRestServer.py" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -388,7 +376,6 @@
     <Content Include="Scripts\popper-utils.js.map" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="BackEnd\Python\Facenet\__pycache__\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
