--- a/restServer/restServer.csproj
+++ b/restServer/restServer.csproj
@@ -43,8 +43,8 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -282,6 +282,7 @@
     <Content Include="App_Data\CreateTables.sql" />
     <Content Include="App_Data\Populate.sql" />
     <Content Include="App_Data\Select.sql" />
+    <Content Include="App_Data\UpdatePresence.sql" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
