--- a/Front/Web.config
+++ b/Front/Web.config
@@ -1,10 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="CFRFApp_dbConnectionString" connectionString="Data Source=cfrfappdbserver.database.windows.net;Initial Catalog=CFRFApp_db;Persist Security Info=True;User ID=vinicius;Password=CFRF@2018"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="DBServer" value="cfrfappdbserver.database.windows.net"/>
     <add key="User" value="vinicius"/>
