Log Update Correction Rooms Coordinates

--- a/Front/Web.config
+++ b/Front/Web.config
@@ -14,6 +14,7 @@
     <add key="User" value="vinicius"/>
     <add key="Password" value="CFRF@2018"/>
     <add key="Database" value="CFRFApp_db"/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <system.webServer>
     <defaultDocument enabled="true">
